[package]
name = "rss_feed"
version = "0.1.0"
authors = ["anarchos <jarederl@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = {"version"= "0.2.22", features=["rt-threaded", "macros"]}
web-sys = "0.3.45"
xml-rs= "0.8.3"